[gd_scene load_steps=8 format=2]

[ext_resource path="res://Assets/Actors/Characters/CombatMedic/combat-medic-temp.png" type="Texture" id=1]
[ext_resource path="res://Scenes/Actors/Partner/Partner.gd" type="Script" id=2]
[ext_resource path="res://Assets/FX/shadow.png" type="Texture" id=3]
[ext_resource path="res://Scenes/Overlap/Hurtbox.tscn" type="PackedScene" id=5]

[sub_resource type="CapsuleShape2D" id=1]
radius = 3.99993
height = 26.0001

[sub_resource type="CapsuleShape2D" id=2]
radius = 12.0
height = 4.0

[sub_resource type="CircleShape2D" id=3]
radius = 27.0185

[node name="Partner" type="KinematicBody2D"]
position = Vector2( 0, -7 )
collision_layer = 8
collision_mask = 5
script = ExtResource( 2 )

[node name="Shadow" type="Sprite" parent="."]
position = Vector2( 0.499999, 4 )
scale = Vector2( 1.9375, 1 )
texture = ExtResource( 3 )

[node name="NavigationAgent2D" type="NavigationAgent2D" parent="."]
target_desired_distance = 100.0
path_max_distance = 30.0
avoidance_enabled = true
radius = 60.0
max_speed = 150.0

[node name="Body" type="Sprite" parent="."]
position = Vector2( 0, -10 )
scale = Vector2( 1.2, 1.2 )
texture = ExtResource( 1 )

[node name="Position2D" type="Position2D" parent="Body"]
position = Vector2( 30.8333, 4.16667 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, 7 )
rotation = 1.5708
shape = SubResource( 1 )

[node name="RayCast2D" type="RayCast2D" parent="."]
position = Vector2( 3, -5 )
enabled = true
cast_to = Vector2( 116, 0 )
collision_mask = 4

[node name="Timer" type="Timer" parent="."]
wait_time = 0.3
autostart = true

[node name="Hurtbox" parent="." instance=ExtResource( 5 )]
collision_layer = 32
collision_mask = 0

[node name="CollisionShape2D" parent="Hurtbox" index="0"]
position = Vector2( -1, 0 )
shape = SubResource( 2 )

[node name="DetectPlayer" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="DetectPlayer"]
position = Vector2( -1, 0 )
shape = SubResource( 3 )

[node name="PlayerDetection" type="Node2D" parent="."]

[node name="FireRateTimer" type="Timer" parent="."]

[connection signal="area_entered" from="Hurtbox" to="." method="_on_Hurtbox_area_entered"]
[connection signal="area_entered" from="DetectPlayer" to="." method="_on_DetectPlayer_area_entered"]
[connection signal="timeout" from="FireRateTimer" to="." method="_on_FireRateTimer_timeout"]

[editable path="Hurtbox"]
